# aws-glue-etl-boilerplate

./: .commitlintrc.json  .env.example  .env.local  .envrc.example  .flake8  .gitignore  .markdownlint.json  .mega-linter.yml  .pre-commit-config.yaml  .typos.toml  .yamllint  AGENTS.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  glue.yaml  glue.yml  package-lock.json  package.json  project.toml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  serverless.yml  setup.cfg  setup.py  teamtailor_api_evaluation.json  teamtailor_custom_fields_analysis.json  test_teamtailor_api.py  test_teamtailor_custom_fields.py
.devcontainer/: .env.example  KEYS_ARCHITECTURE.md  README.md  compose.yml  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
docs/: ADDING_A_DATA_SOURCE.md  ARCHITECTURE.md  AWS_GLUE_TROUBLESHOOTING.md  BEST_PRACTICES.md  CLICKUP_WORKFLOW.md  CONTRIBUTING_GUIDELINES.md  DASHBOARDS_IMPLEMENTATION.md  DEPLOYMENT.md  DEVELOPMENT.md  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_NOTES.md  JOB_DEVELOPMENT.md  LIBS_STRUCTURE.md  MEDALLION_ARCHITECTURE.md  MEDALLION_JOB_PATTERN.md  MIGRATION_GUIDE.md  OPERATIONS.md  PACKAGING.md  QUICK_REFERENCE.md  README.md  SCHEMA_EVOLUTION.md  SECRETS_MANAGEMENT.md  TERRAFORM_DEPLOYMENT.md  TESTING.md
jobs/: __init__.py  foo_src_bar_dest_job.py  hello_world.py  pyspark_hello_world.py  pyspark_parquet_mapping_hello_world.py  pythonshell_hello_world.py
libs/: __init__.py  logger.py
local/: .env.example  compose.yml
local-dev/: .env.example  Dockerfile  compose.yaml  docker-compose.yaml
resource/: GlueResources.yml
scripts/: aws-login.sh  build-glue-wheels.sh  clean-localstack.sh  deploy-code-registry.sh  nan-baseline.sh  package.sh  prepare-localstack.sh  scaffold-source.sh  sync-secrets.sh  validate-env.sh
terraform/: .gitignore  cloudwatch.tf  glue_jobs.tf  iam.tf  main.tf  (+9 more)
(+163 files in other folders)
